--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="Styles/style.css">
     <Script src="Scripts/script.js" async></Script>
 </head>
@@ -20,7 +21,8 @@
         </div>
         <div class="nav">
             <ul>
-                <a href="About.html"> <li>About</li></a> 
+                <a href="about.html"> <li>About</li></a> 
+                <a href="services.html"> <li>Services</li></a> 
                 <a href="Solutions.html"><li>Solutions</li></a> 
             </ul>
             <button><a href="login.html"> Log in </a> </button>
@@ -29,6 +31,8 @@
     </header>
 
     <div class="dummy"></div>
+
+    <!-----Welcome Section-->
     <section class="welcome">
         <div class="welcome-body show">
             <h1>AGROEDGE</h1>
@@ -55,7 +59,8 @@
     <!------Third Section----->
 
     <section id="third-section">
-        <h2>Check Current Weather in your location</h2>
+        <h1>Check Current Weather in your location and get </h1>
+            <h1>AI powered recommendation</h1>
         <button type="submit"> <a href="Solutions.html">  Check Now</a></button>
     </section>
 
