--- a/Frontend/services.html
+++ b/Frontend/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AgroEdge | About</title>
+    <title>AgroEdge | services</title>
     <link rel="stylesheet" href="Styles/style.css">
 
     <Script src="Scripts/script.js" async></Script>
@@ -65,5 +65,6 @@ Through the usage of the model’s prediction, farmers are pre-informed on the p
     <div class="bottom_">
     </div>
     </footer>
+
 </body>
 </html>
