--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -34,17 +34,6 @@
             economy. 
         </h1>
 
-        <div class="card">
-
-        <p>Agriculture underpins the livelihoods of over 2.5 billion people worldwide. Given the sector’s innate interactions with the environment, its direct reliance on natural resources for production, and its significance for national socio-economic development, urgent and ambitious action is needed to build more resilient agricultural systems.
-The economic damage brought by gullies, in Nigeria's, could be up to $100 million every year, with agricultural yield losses of 30 to 90% in some areas. And Nigeria's battle with soil erosion is part of a trend playing out in other parts of the world.  In Nigeria, flooding is a recurrent disaster and constitutes a setback to success with the SDGs and sustainable development. Flooding disasters are a threat to food security due to their impact on the food system
-</div>
-
-<div class="card">
-<p>
-According to the Nigeria Hydrological Services Agency, the states mainly affected by flooding and other natural disasters are; Abia, Akwa-Ibom, Anambra, Bauchi, Bayelsa, Benue, Cross-River, Delta, Ebonyi, Edo, Gombe, Imo, Jigawa, Kaduna, Kano, Kebbi, Kogi, Kwara, Lagos, Nasarawa, Niger,  Ogun, Oyo, Rivers, Sokoto, Taraba and Zamfara.
-With flooding, soil erosion and other natural disasters being a menace to the agricultural productivity in Nigeria, comes the emergence of AgroEdge.</p>
-</div>
 
 <div class="card">
 <p>
@@ -53,6 +42,50 @@ Through the usage of the model’s prediction, farmers are pre-informed on the p
         </p>
     </div>
         </div>
+    </section>
+
+
+    <section class="team">
+        <h1>Our Team</h1>
+
+        <div class="row-1">
+            <div class="img-cont">
+            <img src="images/Team VOATH pics/Hope Adebiyi.png" alt="">
+            <p>Hope Adebiyi</p>
+            <small>Project lead</small>
+        </div>
+
+        <div class="img-cont">
+            <img src="images/Team VOATH pics/Obi Vivian Ifunanyachukwu.png" alt="">
+            <p>Vivian Obi</p>
+            <small>Product Designer</small>
+        </div>
+
+        <div class="img-cont">
+            <img src="images/Team VOATH pics/Olabode Oluwaseyi.png" alt="">
+            <p>Olabode Oluwaseyi</p>
+            <small>Data Scientist</small>
+        </div>
+        </div>
+
+
+        <div class="row-2">
+
+            <div class="img-cont">
+            <img src="images/Team VOATH pics/Timothy Olaifa.png" alt="">
+            <p>Timothy Olaifa</p>
+            <small>Backend Developer</small>
+        </div>
+
+        <div class="img-cont">
+            <img src="images/Team VOATH pics/Abednego Aginam.png" alt="">
+            <p>Abednego Aginam</p>
+            <small>Frontend Developer</small>
+        </div>
+        </div>
+       
+
+
     </section>
 
     <footer id="footer">
