--- a/Frontend/Solutions.html
+++ b/Frontend/Solutions.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="Styles/forecast.css">
     <Script src="Scripts/script2.js" async></Script>
     <Script src="Scripts/script.js" async></Script>
+    <Script src="Scripts/index.js" async></Script>
     <link rel="stylesheet" href="font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -63,6 +64,10 @@
                     <div class="card humidity">
                         <p id="humidity"></p>
                     </div>
+
+                    <!-- <div class="card rain">
+                        <p id="rain"></p>
+                    </div> -->
                    
                 </div>
               </section>
@@ -74,9 +79,10 @@
         <h1>Recommendations</h1>
 
         <div class="col-6">
+            <p>
+                Here are the current recommendations for the data stored for the past week:
+             </p>
         </div>
-
-        <div class="col-6"></div>
 
     </section>
      <!--Footer-->
