--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgroEdge | Login</title>
-    <link rel="stylesheet" href="Styles/login.css">
     <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="Styles/login.css">
     <Script src="Scripts/index.js" async></Script>
     <Script src="Scripts/script.js" async></Script>
 </head>
@@ -27,7 +27,9 @@
     </header>
     
     <div class="dummy"></div>
-    <div class="card">
+
+
+    <div class="card-login">
         <div class="top">
             <a href="" id="register">Register</a>
             <a href="" id="login">Login</a>
@@ -35,7 +37,7 @@
 
 
         <div class="innercard reg-form" id="reg-form">
-            <form action="https://voathclone.vercel.app/api/v1/auth/signup" method="post" id="signUp">
+            <form action="" method="post" id="signUp">
             <h3>Sign Up</h3>
 
             <label for="email">
@@ -52,7 +54,7 @@
             </label>
             <label for="number">
                 Phone number
-                <input type="tel" name="number" id="number" required>
+                <input type="tel" name="phone number" id="number" required>
             </label>
             <label for="password">
                 Password 
@@ -62,7 +64,10 @@
                 Retype Password 
                 <input type="password" name="password" id="password" required>
             </label>
-            <button type="submit">Sign Up</button>
+            <button type="submit" id="btn-signUp" onclick="alert('Your data has been saved successfully')">Sign Up</button>
+
+            <!--  -->
+            <!-- onclick="window.location.href='index.html';" -->
         </form>
             <div class="bottom">
             <p>Already a User?</p> <a href="#login-form">Login</a></div>
@@ -71,18 +76,18 @@
 
         <div class="innercard login-form" id="login-form">
 
-            <form action="/api/v1/auth/signin" method="post">
+            <form action="" method="post" id="login_">
             <h3>Login</h3>
-            <label for="email">
+            <label for="email_">
                 Email
-                <input type="email" name="email" id="email_">
+                <input type="email" name="email" id="email_" required>
             </label>
 
-            <label for="password">
+            <label for="password_">
                 Password 
-                <input type="password" name="password" id="password_">
+                <input type="password" name="password" id="password_" required>
             </label>
-            <button>Login</button>
+            <button type="submit" id="btn-signIn">Login</button>
         </form>
             <a href="" class="forget-password">Forgot Password</a>
             <div class="bottom">
