--- a/Frontend/services.html
+++ b/Frontend/services.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgroEdge | services</title>
     <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="Styles/services.css">
 
     <Script src="Scripts/script.js" async></Script>
 </head>
@@ -30,27 +31,23 @@
     <section class="about">
 
         <div class="container">
-        <h1>We are the first indigenous company providing edge tech solutions to the most critical sector of the
-            economy. 
-        </h1>
 
-        <div class="card">
-
-        <p>Agriculture underpins the livelihoods of over 2.5 billion people worldwide. Given the sector’s innate interactions with the environment, its direct reliance on natural resources for production, and its significance for national socio-economic development, urgent and ambitious action is needed to build more resilient agricultural systems.
-The economic damage brought by gullies, in Nigeria's, could be up to $100 million every year, with agricultural yield losses of 30 to 90% in some areas. And Nigeria's battle with soil erosion is part of a trend playing out in other parts of the world.  In Nigeria, flooding is a recurrent disaster and constitutes a setback to success with the SDGs and sustainable development. Flooding disasters are a threat to food security due to their impact on the food system
+        <div class="card card-1">
+            <h1 class="title">Our solutions ensure that there is an all year round availability of food
+                by offering AI powered recommendations with computing at the edge
+            </h1>
 </div>
 
-<div class="card">
-<p>
-According to the Nigeria Hydrological Services Agency, the states mainly affected by flooding and other natural disasters are; Abia, Akwa-Ibom, Anambra, Bauchi, Bayelsa, Benue, Cross-River, Delta, Ebonyi, Edo, Gombe, Imo, Jigawa, Kaduna, Kano, Kebbi, Kogi, Kwara, Lagos, Nasarawa, Niger,  Ogun, Oyo, Rivers, Sokoto, Taraba and Zamfara.
-With flooding, soil erosion and other natural disasters being a menace to the agricultural productivity in Nigeria, comes the emergence of AgroEdge.</p>
+<div class="card card-2">
+<h1 class="title">
+    Subscribers get access to daily weather updates when they subscribe on our platform
+</h1>
 </div>
 
-<div class="card">
-<p>
-AgroEdge is an AI powered model that relies heavily on real-time data about weather and rainfall forecast and river water levels to predict flooding and soil erosion in Nigeria.
-Through the usage of the model’s prediction, farmers are pre-informed on the possibility of the occurrence of flooding and soil erosion. </p>
-        </p>
+<div class="card card-3">
+    <h1 class="title">
+        Our AI powered model give farmers the confidence they need to make decisions 
+    </h1>
     </div>
         </div>
     </section>
